--- a/stylesheets/shThemePowerShell.css
+++ b/stylesheets/shThemePowerShell.css
@@ -1,5 +1,5 @@
 .syntaxhighlighter {
-  font-size: 1.2em !important; 
+  font-size: .8em !important; 
 }
 .syntaxhighlighter {
   background-color: #fff !important;
